other-vpol/memory-requests-equal-limits/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "200Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "10Mi"
      limits:
        memory: "140Mi"
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "150Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "120Mi"
      limits:
        memory: "120Mi"
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "150Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "200Mi"
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "100Mi"

---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: 128Mi
