other-vpol/memory-requests-equal-limits/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod00
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "100Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "100Mi"
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: busybox03
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "50Mi"
      limits:
        memory: "50Mi"

---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      limits:
        memory: 128Mi
